--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -5,21 +5,33 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gustavo Farfan | Portfolio</title>
+    <!-- Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <!-- Styles -->
+    <link rel="stylesheet" href="../styles/style.css">
 </head>
 <body>
-    <header>
-        <h1><span>G</span><span>F</span></h1>
-        <nav>
-            <ul>
-                <a href="#project"><li>Proyectos</li></a>
-                <a href="#contact"><li>Contacto</li></a>
-                <a href="#skill"><li>Conocimientos</li></a>
-            </ul>
-        </nav>
-        <div>
-            <p>Hola, Soy <span>Gustavo</span></p>
-            <p>Soy un desarrollador de software.</p>
-            <p>Me encanta cadia aprender nuevas tecnologías y lo que se puede llegar a realizar. Los desafios los veo como una forma de aprender y probar mis conocimientos</p>
+    <header class="main-header">
+        <div class="container container-header">
+            <div class="bar-header">
+                <h1 class="main-icon">
+                    <span class="first-letter">G</span><span class="rest letter">ustavo</span>
+                    <span class="first-letter letter">F</span><span class="rest letter">arfan</span>
+                </h1>
+                <nav class="nav-container">
+                    <ul class="nav-header">
+                        <li><a href="#project">Proyectos</a></li>
+                        <li><a href="#contact">Contacto</a></li>
+                        <li><a href="#skill">Conocimientos</a></li>
+                    </ul>
+                </nav>
+            </div>
+            <div class="presentation">
+                <p>Hola, Soy <span class="hightlight">Gustavo</span>!!</p>
+                <p>Soy un <span class="hightlight">desarrollador de software</span></p>
+                <p class="presentation-description">Me encanta cadia aprender nuevas tecnologías y lo que se puede llegar a realizar. Los desafios los veo como una forma de aprender y probar mis conocimientos</p>
+            </div>
         </div>
     </header>
     <main>
