Project styles and with each item

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -6,8 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gustavo Farfan | Portfolio</title>
     <!-- Fonts -->
-    <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Exo+2:wght@100;200&display=swap" rel="stylesheet">    
+    <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic&display=swap" rel="stylesheet">
     <!-- Styles -->
     <link rel="stylesheet" href="../styles/style.css">
 </head>
@@ -35,70 +36,166 @@
         </div>
     </header>
     <main>
-        <h2 id="project">Proyectos</h2>
-        <div class="project-list">
-            <div class="project-item">
-                <h3 class="project-title">Proyecto 1</h3>
-                <p class="project-description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deserunt quo autem dolores officia sapiente pariatur harum vel, cum nam odit, non voluptatibus hic porro architecto placeat labore nesciunt aspernatur eligendi!</p>
-                <div class="project-image">
-                    <img src="" alt="">
-                    
+        <div class="container title-container">
+            <h2 class="title">Proyectos</h2>
+        </div>
+        <div class="container">
+            <div class="project-list">
+                <div class="project-item">
+                    <h3 class="project-title">Acresoft</h3>
+                    <p class="project-description">Pagina de instituto Acresoft</p>
+                    <div class="project-image">
+                        <img src="../images/acresoft.PNG" alt="">
+                    </div>
+                    <div class="project-tags">
+                        <ul>
+                            <li class="tags html">HTML</li>
+                            <li class="tags css">CSS</li>
+                            <li class="tags js">Javascript</li>
+                            <li class="tags php">PHP</li>
+                            <li class="tags db">MySQL</li>
+                        </ul>
+                    </div>
+                    <div class="btn-more">
+                        <a href="#">Ver proyecto</a>
+                    </div>
                 </div>
-                <div class="project-tags">
-                    <ul>
-                        <li>Java</li>
-                        <li>SQL</li>
-                    </ul>
+                <div class="project-item">
+                    <h3 class="project-title">Citytours</h3>
+                    <p class="project-description">Pagina de vuelos y turismo</p>
+                    <div class="project-image">
+                        <img src="../images/citytours.PNG" alt="">
+                    </div>
+                    <div class="project-tags">
+                        <ul>
+                            <li class="tags laravel">Laravel</li>
+                            <li class="tags html">HTML</li>
+                            <li class="tags js">Javascript</li>
+                            <li class="tags css">CSS</li>
+                            <li class="tags db">MySQL</li>
+                        </ul>
+                    </div>
+                    <div class="btn-more">
+                        <a href="#">Ver proyecto</a>
+                    </div>
                 </div>
-                <div>
-                    <a href="#">Ver proyecto</a>
+                <div class="project-item">
+                    <h3 class="project-title">El tornillo Feliz</h3>
+                    <p class="project-description">Pagina de ferreteria <span>"El tornillo Feliz"</span>, con carrito y chatbot</p>
+                    <div class="project-image">
+                        <img src="../images/django.png" alt="">
+                    </div>
+                    <div class="project-tags">
+                        <ul>
+                            <li class="tags python">Python</li>
+                            <li class="tags django">Django</li>
+                            <li class="tags html">HTML</li>
+                            <li class="tags css">CSS</li>
+                            <li class="tags js">JavaScript</li>
+                            <li class="tags db">MySQL</li>
+                        </ul>
+                    </div>
+                    <div class="btn-more">
+                        <a href="#">Ver proyecto</a>
+                    </div>
                 </div>
-            </div>
-            
+                <div class="project-item">
+                    <h3 class="project-title">Control de asistencias</h3>
+                    <p class="project-description">Pagina de control de asistencias</p>
+                    <div class="project-image">
+                        <img src="../images/login-negreiros.png" alt="">
+                    </div>
+                    <div class="project-tags">
+                        <ul>
+                            <li class="tags laravel">Laravel</li>
+                            <li class="tags html">HTML</li>
+                            <li class="tags css">CSS</li>
+                            <li class="tags db">MySQL</li>
+                        </ul>
+                    </div>
+                    <div class="btn-more">
+                        <a href="#">Ver proyecto</a>
+                    </div>
+                </div>
+                <div class="project-item">
+                    <h3 class="project-title">BlackJack</h3>
+                    <p class="project-description">Juego de Blackjack</p>
+                    <div class="project-image">
+                        <img src="../images/java/game2.PNG" alt="">
+                    </div>
+                    <div class="project-tags">
+                        <ul>
+                            <li class="tags java">Java</li>
+                        </ul>
+                    </div>
+                    <div class="btn-more">
+                        <a href="#">Ver proyecto</a>
+                    </div>
+                </div>
+                <div class="project-item">
+                    <h3 class="project-title">Instituto </h3>
+                    <p class="project-description">Gestor de contenido de instituto</p>
+                    <div class="project-image">
+                        <img src="../images/c-sharp/c1.png" alt="">
+                    </div>
+                    <div class="project-tags">
+                        <ul>
+                            <li class="tags c-sharp">C#</li>
+                            <li class="tags db">SQLServer</li>
+                        </ul>
+                    </div>
+                    <div class="btn-more">
+                        <a href="#">Ver proyecto</a>
+                    </div>
+                </div>
             </div>
         </div>
-        <div id="skill">
-            <div class="">
-                <h3>Conocimientos</h3>
-                <div>
-                    <p>HTML5, CSS3, Javascript </p>
+        <div class="container">
+            <div id="skill">
+                <div class="">
+                    <h3>Conocimientos</h3>
                     <div>
-                        <span class="bar"></span>
+                        <p>HTML5, CSS3, Javascript </p>
+                        <div>
+                            <span class="bar"></span>
+                        </div>
                     </div>
-                </div>
-                <div>
-                    <p>PHP, Laravel </p>
                     <div>
-                        <span class="bar"></span>
+                        <p>PHP, Laravel </p>
+                        <div>
+                            <span class="bar"></span>
+                        </div>
                     </div>
-                </div>
-                <div>
-                    <p>Python, Django </p>
                     <div>
-                        <span class="bar"></span>
+                        <p>Python, Django </p>
+                        <div>
+                            <span class="bar"></span>
+                        </div>
                     </div>
-                </div>
-                <div>
-                    <p>SQL </p>
                     <div>
-                        <span class="bar"></span>
+                        <p>SQL </p>
+                        <div>
+                            <span class="bar"></span>
+                        </div>
                     </div>
-                </div>
-                <div>
-                    <p>C#, Java </p>
                     <div>
-                        <span class="bar"></span>
+                        <p>C#, Java </p>
+                        <div>
+                            <span class="bar"></span>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </main>
     <footer class="main-footer">
-        <div class="content-footer">
-            <p>Gustavo Farfan 2021</p>
+        <div class="container">
+            <div class="content-footer">
+                <p>Gustavo Farfan 2021</p>
+            </div>
         </div>
     </footer>
 
-
+    <script src="https://kit.fontawesome.com/0dadf959e1.js" crossorigin="anonymous"></script>
 </body>
 </html>
