--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Exo+2:wght@100;200&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic&display=swap" rel="stylesheet">
     <!-- Styles -->
-    <link rel="stylesheet" href="../styles/style.css">
+    <link rel="stylesheet" href="./src/styles/style.css">
 </head>
 
 <body>
@@ -48,7 +48,7 @@
                     <h3 class="project-title">Acresoft</h3>
                     <p class="project-description">Pagina de instituto Acresoft</p>
                     <div class="project-image">
-                        <img src="../images/acresoft.PNG" alt="">
+                        <img src="./src/images/acresoft.PNG" alt="">
                     </div>
                     <div class="project-tags">
                         <ul>
@@ -67,7 +67,7 @@
                     <h3 class="project-title">Citytours</h3>
                     <p class="project-description">Pagina de vuelos y turismo</p>
                     <div class="project-image">
-                        <img src="../images/citytours.PNG" alt="">
+                        <img src="./src/images/citytours.PNG" alt="">
                     </div>
                     <div class="project-tags">
                         <ul>
@@ -87,7 +87,7 @@
                     <p class="project-description">Pagina de ferreteria <span>"El tornillo Feliz"</span>, con carrito y
                         chatbot</p>
                     <div class="project-image">
-                        <img src="../images/django.png" alt="">
+                        <img src="./src/images/django.png" alt="">
                     </div>
                     <div class="project-tags">
                         <ul>
@@ -107,7 +107,7 @@
                     <h3 class="project-title">Control de asistencias</h3>
                     <p class="project-description">Pagina de control de asistencias</p>
                     <div class="project-image">
-                        <img src="../images/login-negreiros.png" alt="">
+                        <img src="./src/images/login-negreiros.png" alt="">
                     </div>
                     <div class="project-tags">
                         <ul>
@@ -125,7 +125,7 @@
                     <h3 class="project-title">BlackJack</h3>
                     <p class="project-description">Juego de Blackjack</p>
                     <div class="project-image">
-                        <img src="../images/java/game2.PNG" alt="">
+                        <img src="./src/images/java/game2.PNG" alt="">
                     </div>
                     <div class="project-tags">
                         <ul>
@@ -140,7 +140,7 @@
                     <h3 class="project-title">Instituto </h3>
                     <p class="project-description">Gestor de contenido de instituto</p>
                     <div class="project-image">
-                        <img src="../images/c-sharp/c1.png" alt="">
+                        <img src="./src/images/c-sharp/c1.png" alt="">
                     </div>
                     <div class="project-tags">
                         <ul>
@@ -219,7 +219,7 @@
         </div>
     </footer>
     <script src="https://kit.fontawesome.com/0dadf959e1.js" crossorigin="anonymous"></script>
-    <script src="../js/script.js"></script>
+    <script src="./src/js/script.js"></script>
 </body>
 
 </html>
