--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     <h3 class="project-title">Acresoft</h3>
                     <p class="project-description">Pagina de instituto Acresoft</p>
                     <div class="project-image">
-                        <img src="./src/images/acresoft.PNG" alt="">
+                        <img src="./src/images/acresoft.png" alt="">
                     </div>
                     <div class="project-tags">
                         <ul>
@@ -67,7 +67,7 @@
                     <h3 class="project-title">Citytours</h3>
                     <p class="project-description">Pagina de vuelos y turismo</p>
                     <div class="project-image">
-                        <img src="./src/images/citytours.PNG" alt="">
+                        <img src="./src/images/citytours.png" alt="">
                     </div>
                     <div class="project-tags">
                         <ul>
@@ -125,7 +125,7 @@
                     <h3 class="project-title">BlackJack</h3>
                     <p class="project-description">Juego de Blackjack</p>
                     <div class="project-image">
-                        <img src="./src/images/java/game2.PNG" alt="">
+                        <img src="./src/images/java/game2.png" alt="">
                     </div>
                     <div class="project-tags">
                         <ul>
