--- a/index.html
+++ b/index.html
@@ -15,13 +15,23 @@
 </head>
 
 <body>
-    <header class="main-header">
+    <header class="main-header" id="main-header">
         <div class="container container-header">
             <div class="bar-header">
-                <h1 class="main-icon">
-                    <span class="first-letter">G</span><span class="rest letter">ustavo</span>
-                    <span class="first-letter letter">F</span><span class="rest letter">arfan</span>
-                </h1>
+                <a href="#main-header" class="icon-link">
+                    <h1 class="icon">
+                        <div class="icon-content">
+                            <p id="first-name">
+                                <span class="name">G</span> 
+                                <span class="letters">ustavo</span>
+                            </p>
+                            <p id="last-name">
+                                <span class="name">F</span>
+                                <span class="letters">arfan</span> 
+                            </p>
+                        </div>
+                    </h1>
+                </a>
                 <nav class="nav-container">
                     <ul class="nav-header">
                         <li><a href="#projects">Proyectos</a></li>
@@ -60,7 +70,7 @@
                         </ul>
                     </div>
                     <div class="btn-more">
-                        <a href="#">Ver proyecto</a>
+                        <a href="https://github.com/gafc2001/Acresoft" target="_blank">Ver proyecto</a>
                     </div>
                 </div>
                 <div class="project-item">
@@ -79,7 +89,7 @@
                         </ul>
                     </div>
                     <div class="btn-more">
-                        <a href="#">Ver proyecto</a>
+                        <a href="https://github.com/gafc2001/citytours" target="_blank">Ver proyecto</a>
                     </div>
                 </div>
                 <div class="project-item">
@@ -100,7 +110,7 @@
                         </ul>
                     </div>
                     <div class="btn-more">
-                        <a href="#">Ver proyecto</a>
+                        <a href="https://github.com/gafc2001/Website-ferreteria" target="_blank">Ver proyecto</a>
                     </div>
                 </div>
                 <div class="project-item">
@@ -118,7 +128,7 @@
                         </ul>
                     </div>
                     <div class="btn-more">
-                        <a href="#">Ver proyecto</a>
+                        <a href="https://github.com/gafc2001/attendance" target="_blank">Ver proyecto</a>
                     </div>
                 </div>
                 <div class="project-item">
@@ -133,7 +143,7 @@
                         </ul>
                     </div>
                     <div class="btn-more">
-                        <a href="#">Ver proyecto</a>
+                        <a href="https://github.com/gafc2001/pokergame-21" target="_blank">Ver proyecto</a>
                     </div>
                 </div>
                 <div class="project-item">
@@ -149,7 +159,7 @@
                         </ul>
                     </div>
                     <div class="btn-more">
-                        <a href="#">Ver proyecto</a>
+                        <a href="https://github.com/gafc2001/Instituto" target="_blank">Ver proyecto</a>
                     </div>
                 </div>
             </div>
