Adding contact information

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
     <header class="main-header" id="main-header">
         <div class="container container-header">
-            <div class="bar-header">
+            <div class="bar-header sticky">
                 <a href="#main-header" class="icon-link">
                     <h1 class="icon">
                         <div class="icon-content">
@@ -48,7 +48,7 @@
             </div>
         </div>
     </header>
-    <main>
+    <main class="main-container">
         <div class="container title-container" id="projects">
             <h2 class="title">Proyectos</h2>
         </div>
@@ -234,10 +234,10 @@
                 <p class="title-footer">Gustavo Farfan 2021</p>
                 <div class="contact-list">
                     <ul>
-                        <li><i class="fas fa-envelope"></i></li>
-                        <li><i class="fas fa-phone"></i></li>
-                        <li><i class="fab fa-github"></i></li>
-                        <li><i class="fab fa-linkedin"></i></li>
+                        <li><a href="mailto:farfancoraje15@gmail.com"><i class="fas fa-envelope"></a></i></li>
+                        <li><a href="tel:910534484"><i class="fas fa-phone"></a></i></li>
+                        <li><a href="github.com/gafc2001"><i class="fab fa-github"></a></i></li>
+                        <li><a href="https://www.linkedin.com/in/gustavo-farfan-coraje-64488b211/"><i class="fab fa-linkedin"></a></i></li>
                     </ul>
                 </div>
             </div>
