Changed description and picture profile

--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
                         </div>
                         <p class="font-monospace fs-5 fw-light text-typing"><span class="purple">print</span>(<span class="string">"Software Developer"</span>)</p>
                         <div class="ps-3 border-4 border-start border-custom fs-5">
-                            <p>Soy un desarrollar de software, actualmente estoy cursando la carrera de Ingieneria de Software</p>
+                            <p>Soy un desarrollador de software, actualmente estoy cursando la carrera de Ingeniería de Software</p>
                             <p>Me encanta crear aplicaciones en la que pueda solucionar un problema. Para ello busco proyectos en la que pueda aplicar mis conocimientos y al mismo tiempo,que permite crecer profesionalmente</p>
                         </div>
                     </div>
                     <div class="col-12 col-lg-4 d-flex">
                         <div class="mx-lg-5 text-center w-100">
-                            <img src="./src/images/groot.jpg" alt="profile" class="img-fluid rounded shadow-lg rounded-circle img-profile">
+                            <img src="./src/images/profile.jpg" alt="profile" class="img-fluid rounded shadow-lg rounded-circle img-profile">
                         </div>
                     </div>
                 </div>
@@ -55,41 +55,53 @@
     <!-- Skill Set -->
     <section class="section container-lg my-5" id="skill-set">
         <div class="title-container">
-            <h2 class="title">Skill Set</h2>
+            <h2 class="title">Mis habilidades</h2>
         </div>
         <div class="mb-3">
             <div class="d-flex justify-content-around flex-wrap">
-                <div class="tech-item me-5 mb-3 d-flex flex-column">
-                    <img class="tech-skills" src="./src/images/technologies/laravel.svg" alt="laravel">
-                    <span class="text-center text-tech text-laravel">Laravel</span>
+                <div class="skill-item me-5 mb-3 d-flex flex-column">
+                    <img class="skill-img" src="./src/images/technologies/laravel.svg" alt="laravel">
+                    <span class="fs-5 text-center text-tech text-laravel">Laravel</span>
                 </div>
-                <div class="tech-item me-5 mb-3 d-flex flex-column">
-                    <img class="tech-skills" src="./src/images/technologies/spring.svg" alt="spring">
-                    <span class="text-center text-tech text-spring">Spring</span>
+                <div class="skill-item me-5 mb-3 d-flex flex-column">
+                    <img class="skill-img" src="./src/images/technologies/spring.svg" alt="spring">
+                    <span class="fs-5 text-center text-tech text-spring">Spring</span>
                 </div>
-                <div class="tech-item me-5 mb-3 d-flex flex-column">
-                    <img class="tech-skills" src="./src/images/technologies/java.png" alt="java">
-                    <span class="text-center text-tech text-java">Java</span>
+                <div class="skill-item me-5 mb-3 d-flex flex-column">
+                    <img class="skill-img" src="./src/images/technologies/java.png" alt="java">
+                    <span class="fs-5 text-center text-tech text-java">Java</span>
                 </div>
-                <div class="tech-item me-5 mb-3 d-flex flex-column">
-                    <img class="tech-skills" src="./src/images/technologies/mysql.png" alt="mysql">
-                    <span class="text-center text-tech text-mysql">MySql</span>
+                <div class="skill-item me-5 mb-3 d-flex flex-column">
+                    <img class="skill-img" src="./src/images/technologies/mysql.png" alt="mysql">
+                    <span class="fs-5 text-center text-tech text-mysql">MySql</span>
                 </div>
-                <div class="tech-item me-5 mb-3 d-flex flex-column">
-                    <img class="tech-skills" src="./src/images/technologies/postgresql.svg" alt="postgresql">
-                    <span class="text-center text-tech text-postgresql">Postgresql</span>
+                <div class="skill-item me-5 mb-3 d-flex flex-column">
+                    <img class="skill-img" src="./src/images/technologies/postgresql.svg" alt="postgresql">
+                    <span class="fs-5 text-center text-tech text-postgresql">Postgresql</span>
                 </div>
-                <div class="tech-item me-5 mb-3 d-flex flex-column">
-                    <img class="tech-skills" src="./src/images/technologies/django.png" alt="django">
-                    <span class="text-center text-tech text-django">Django</span>
+                <div class="skill-item me-5 mb-3 d-flex flex-column">
+                    <img class="skill-img" src="./src/images/technologies/django.png" alt="django">
+                    <span class="fs-5 text-center text-tech text-django">Django</span>
                 </div>
-                <div class="tech-item me-5 mb-3 d-flex flex-column">
-                    <img class="tech-skills" src="./src/images/technologies/php.png" alt="php">
-                    <span class="text-center text-tech text-php">Php</span>
+                <div class="skill-item me-5 mb-3 d-flex flex-column">
+                    <img class="skill-img" src="./src/images/technologies/php.png" alt="php">
+                    <span class="fs-5 text-center text-tech text-php">Php</span>
                 </div>
-                <div class="tech-item me-5 mb-3 d-flex flex-column">
-                    <img class="tech-skills" src="./src/images/technologies/bootstrap.svg" alt="">
-                    <span class="text-center text-tech text-bootstrap">Bootstrap</span>
+                <div class="skill-item me-5 mb-3 d-flex flex-column">
+                    <img class="skill-img" src="./src/images/technologies/bootstrap.svg" alt="bootstrap">
+                    <span class="fs-5 text-center text-tech text-bootstrap">Bootstrap</span>
+                </div>
+                <div class="skill-item me-5 mb-3 d-flex flex-column">
+                    <img class="skill-img" src="./src/images/technologies/html.png" alt="html5">
+                    <span class="fs-5 text-center text-tech text-html">HTML5</span>
+                </div>
+                <div class="skill-item me-5 mb-3 d-flex flex-column">
+                    <img class="skill-img" src="./src/images/technologies/css.png" alt="css">
+                    <span class="fs-5 text-center text-tech text-css">CSS3</span>
+                </div>
+                <div class="skill-item me-5 mb-3 d-flex flex-column">
+                    <img class="skill-img" src="./src/images/technologies/js.png" alt="">
+                    <span class="fs-5 text-center text-tech text-js">Javascript</span>
                 </div>
                 
             </div>
@@ -377,7 +389,7 @@
             </div>
         </div>
         <div class="row bg-footer-secondary">
-            <p class="m-0 text-center py-4">Gustavo Farfan | Portfolio <span id="year">2021</span></p>
+            <p class="m-0 text-center py-4">Gustavo Farfan Coraje| Portfolio <span id="year">2021</span></p>
         </div>
     </footer>
     <!-- Main footer -->
