--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                 <p>Para el proyecto se uso React y se consume la Restaurant API</p>
                 <div class="d-flex align-items-md-center flex-column flex-sm-row">
                     <p class="m-0 me-2">Ir al proyecto <i class="fas fa-arrow-alt-circle-right"></i></p>
-                    <a target="_blank" class="project-link bg-primary my-2" href="https://restaurantrestapi.herokuapp.com">
+                    <a target="_blank" class="project-link bg-primary my-2" href="https://restaurant-line.herokuapp.com">
                         <i class="fas fa-globe me-2"></i>
                         <span>https://restaurant-line.herokuapp.com</span>
                     </a>
@@ -331,7 +331,7 @@
                 <p>Acresoft es una pagina web diseñada para mostrar los cursos que el instituto esta ofreciendo</p>
                 <div class="d-flex align-items-md-center flex-column flex-sm-row">
                     <p class="m-0 me-2">Ir al proyecto <i class="fas fa-arrow-alt-circle-right"></i></p>
-                    <a target="_blank" class="project-link bg-primary my-2" href="https://restaurantrestapi.herokuapp.com">
+                    <a target="_blank" class="project-link bg-primary my-2" href="http://acresoft.atwebpages.com">
                         <i class="fas fa-globe me-2"></i>
                         <span>http://acresoft.atwebpages.com</span>
                     </a>
