--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="/favicon.ico"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="description" content="Web site created using create-react-app"/><link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Rajdhani:wght@600;700&display=swap" rel="stylesheet"><link rel="apple-touch-icon" href="/favicon.png"/><title>Gustavo Farfan | Portfolio</title><script defer="defer" src="/static/js/main.a777960b.js"></script><link href="/static/css/main.120c4296.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div><script src="https://kit.fontawesome.com/0dadf959e1.js" crossorigin="anonymous"></script></body></html>
+<html lang="en">
+<head>
+    <meta charset="utf-8"/>
+    <meta http-equiv="refresh" content="0;url=https://devgustavo.com"/>
+    <link rel="canonical" href="https://devgustavo.com"/>
+    <title>Redirecting</title>
+</head>
+<body>
+    <p>Document has moved, if you aren't automatically redirected 
+    <a href="https://devgustavo.com">go here</a>.</p>
+</body>
+</html>
